[editor] Reduce TextEditor height to prevent scrollbar

--- a/projects/editor/src/app/text-editor/rich-text-editor.component.css
+++ b/projects/editor/src/app/text-editor/rich-text-editor.component.css
@@ -1,5 +1,5 @@
 div.ProseMirror {
-  min-height: 350px;
+  min-height: 250px;
   border: 1px solid;
 }
 
